--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Experts#show</h1>
-<p>Find me in app/views/experts/show.html.erb</p>
+<h2> <%= @expert.major  %></h2>
+
+<h3>
+<%= @expert.name %>
+</h3>
+
+<p><%= @expert.bio %></p>
