modified home page, before renaming admins table

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,34 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<h3>
+What are early intervention services?
+</h3>
+
+<p>
+Early intervention services are a range of targeted services 
+to help young children who have developmental delays or specific 
+health conditions.
+</p>
+<p>
+
+Providing services early helps children
+catch up and increases their chances for success 
+in school and life overall.
+</p>
+
+
+<h3>
+Who’s eligible for early intervention services?
+</h3>
+<p>
+Early intervention is for children from birth to age 6.
+To be eligible, your child must have either:
+</p>
+<ul>
+<li>A developmental delay—be far behind other kids his age.</li>
+<li>A specific health condition that will probably lead to a delay—this
+includes genetic disorders, birth defects and hearing loss, but typically
+ not learning or attention issues like dyslexia and ADHD.
+</li>
+</ul>
+
+<%= button_to "Our Services", services_path, :method => "get" %>
