--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -5,5 +5,6 @@
 <%= @Service.name %> 
 <br>
 <% @Service.experts.each do |expert| %>
-            <%= link_to "#{expert.name}", expert_path(expert) %>
+          <li>  <%= link_to "#{expert.name}", expert_path(expert) %> </li>
 <% end %>
+
