--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -5,3 +5,5 @@
 </h3>
 
 <p><%= @expert.bio %></p>
+<%= button_to "Book A Session should send email to the expert", services_path, :method => "get" %>
+
