--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 
   <body>
   <%= link_to 'Log In', new_admin_session_path %>
-
 <%= link_to "Sign Up", new_admin_registration_path %>
+<%= link_to 'Log Out', destroy_admin_session_path, method: :delete %>
+
+<%= link_to 'Delete Account', admin_registration_path, method: :delete %>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
