done with log in devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,17 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-  <%= link_to 'Log In', new_admin_session_path %>
-<%= link_to "Sign Up", new_admin_registration_path %>
-<%= link_to 'Log Out', destroy_admin_session_path, method: :delete %>
 
-<%= link_to 'Delete Account', admin_registration_path, method: :delete %>
+  <body>
+<nav>
+      <% if user_signed_in? %>
+        <%= link_to "View Profile ", user_path(current_user) %>
+        <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Log in", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>  
+ </nav>       
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
