--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
       <% else %>
         <%= link_to "Log in", new_user_session_path %>
         <%= link_to "Sign Up", new_user_registration_path %>
-      <% end %>  
- </nav>       
+      <% end %> 
+       <%= link_to " Home ", root_path %> 
+ </nav> 
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
     <%= yield %>
