--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -5,5 +5,7 @@
 </h3>
 
 <p><%= @expert.bio %></p>
-<%= button_to "Book A Session should send email to the expert", services_path, :method => "get" %>
+    <button class="btn waves-effect waves-light" type="submit" name="action"> <%=   button_to  "Book A Session should send email to the expert", "services_path", :method => "get" %>
+        <i class="material-icons right">send</i>  
+    </button>
 
