--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,15 @@
 
 
   <body>
-<nav>
-      <% if user_signed_in? %>
-        <%= link_to "View Profile ", user_path(current_user) %>
-        <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
-      <% else %>
-        <%= link_to "Log in", new_user_session_path %>
-        <%= link_to "Sign Up", new_user_registration_path %>
-      <% end %> 
-       <%= link_to " Home ", root_path %> 
- </nav> 
+
+  
+<%= render partial: 'services/nav' %>
+
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
