added booking model before Heroku

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,12 +42,14 @@
     <%= f.telephone_field :phone_number %>
   </div>
   
-  
-  <div  >
+  <!-- select does not work . it has function on app.js-->
+  <div class="select" > 
     <%= f.label :city %><br />
     <%= f.select :city,  ['Riyadh', 'Khobar', 'Jeddah'] %>
   </div>
+  <div>
   
+  </div>
 
 
 
