--- a/app/views/services/_nav.html.erb
+++ b/app/views/services/_nav.html.erb
@@ -25,7 +25,7 @@
                         <!-- Dropdown Trigger -->
                 <li>
                 <a class="dropdown-trigger" href="#!" data-target="dropdown1">
-                <% if current_user.first_name  %>
+                <% if user_signed_in?  %> <!-- if current_user.first_name-->
                     <%= current_user.first_name %>
                 <% else%>  
                     Log In!
