--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<h1>User#show</h1>
-<p>Find me in app/views/user/show.html.erb</p>
+welcome <%= @user.first_name %> <%= @user.last_name %>
+
+ 
+You have <%=  %> Pending reservation
