--- a/app/views/services/_nav.html.erb
+++ b/app/views/services/_nav.html.erb
@@ -20,7 +20,7 @@
                  <li><%= link_to " Home ", root_path %></li>
                  <li><%= link_to " Services ", services_path %></li>
                  <li><%= link_to " Our Partners ", experts_path %></li>
-                 <li><a href="about.html">About Us</a></li>
+                 <li><%= link_to "About Us", about_path %> </li>
                 <li><a href="contact.html">Contact</a></li>
                         <!-- Dropdown Trigger -->
                 <li>
