--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,29 @@
+<img src="http://aa2.nancyicedesigns.net/wp-content/uploads/2017/01/Page-Header-EI-Program.jpg "  id="cenpage"alt="" height=300px width=900px >
 
-<h3>
-What are early intervention services?
-</h3>
+
+ <aside class="ei-centers">
+ <table>
+<thead>
+<tr>
+<th><h6 class = "list">Recommended EI centers</h6></th>
+</tr>
+</thead>
+ <tbody>
+<tr> <td> <a href="http://www.mfac.com.sa/English/aDefault.aspx">MFAC</a></td> </tr>
+  <td><a href="https://humanitariancity.org.sa/Default.aspx">SBAH</a></td> </tr>
+ <td> <a href="https://www.dca.org.sa/">DCA</a></td> </tr>
+ </tbody>
+</table>
+</aside>
+
+
+
+<div class="container">
+
+
+<h5 class ="cyan-text">
+What Are Early Intervention Services?
+</h5>
 
 <p>
 Early intervention services are a range of targeted services 
@@ -16,19 +38,23 @@ in school and life overall.
 </p>
 
 
-<h3>
-Who’s eligible for early intervention services?
-</h3>
+<h5 class ="cyan-text">
+Who’s Eligible Eor Early Intervention Services?
+</h5>
 <p>
 Early intervention is for children from birth to age 6.
 To be eligible, your child must have either:
 </p>
-<ul>
+<p>
+<ul class="p">
 <li>A developmental delay—be far behind other kids his age.</li>
 <li>A specific health condition that will probably lead to a delay—this
 includes genetic disorders, birth defects and hearing loss, but typically
  not learning or attention issues like dyslexia and ADHD.
 </li>
 </ul>
-
+<p>
+<button class="btn waves-effect  hide-on-med-and-down yellow darken-1" type="submit" name="action">
 <%= button_to "Our Services", services_path, :method => "get" %>
+</button>
+</div>
