before Naif suggestions ^_^

--- a/app/views/pages/booked.html.erb
+++ b/app/views/pages/booked.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
 Your request has been successfully submitted. <br>
 Status: <span class="red-text"> Pending!</span>
 
+</div>
