--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
    <link href="https://fonts.googleapis.com/css?family=Rakkas" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+
   </head>
 
 
@@ -26,6 +28,7 @@
     </header>
 
 <main>
+
     <%= yield %>
     </main>
     
@@ -34,7 +37,7 @@
           
           <div class="footer-copyright">
            
-             Copyright © 2018 Awon.org.sa All Rights Reserved.
+             Copyright © 2018 Awon.sa All Rights Reserved.
             
             </div>
          
