--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,16 @@
-
-
-
-<p>
-BNB
+<div class="container">
+<%= image_tag 'rsz_aboutus.jpg' %>
+<p id="about">
+Awon  is a non-profit organization founded by Nora Albrman , 
+Awon dedicated to serving children who have developmental delays.  
+serves children from birth to 6 years of age with a variety of special needs, including, 
+ autism, Down syndrome, cerebral palsy, sensory issues, prematurity. 
+ We offer individual early intervention services in preschool programs and 
+ individual home sessions; depending upon the child’s individual needs.
+  Our services include Occupational Therapy,, Speech Therapy, Behavior Management.
 
 </p>
+
+
+
+</div>
