--- a/app/views/services/_nav.html.erb
+++ b/app/views/services/_nav.html.erb
@@ -20,9 +20,10 @@
             <ul class="right hide-on-med-and-down  cyan darken-2 white-text">
                  <li><%= link_to " Home ", root_path %></li>
                  <li><%= link_to " Services ", services_path %></li>
-                 <li><%= link_to " Our Partners ", experts_path %></li>
+                 <li><%= link_to " Our Experts ", experts_path %></li>
                  <li><%= link_to "About Us", about_path %> </li>
-                <li><a href="contact.html">Contact</a></li>
+                 <li><%= link_to "Contact", contact_path %> </li>
+                
                         <!-- Dropdown Trigger -->
                 <li>
                 <a class="dropdown-trigger" href="#!" data-target="dropdown1">
