--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 
-<h5 class ="cyan-text"> Choose Service :  </h5>
+   <h5 class ="cyan-text"> Awon provides :  </h5>
 
 </div>
 
@@ -13,7 +13,7 @@
     
         <div class="row">
             <div class= " co s9 ">
-                <button class=" waves-effect btn-large   yellow darken-1 carousel-item"> <%=  link_to service.name, service_path(service) %> </button>
+                <button class=" waves-effect btn-large   yellow darken-1 carousel-item delblack"> <%=  link_to service.name, service_path(service) %> </button>
             </div>
         </div>
     
@@ -21,4 +21,3 @@
 
 <% end %>
 
-<img src="rsz_bgballoon.jpg" >
