--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,12 +1,26 @@
 
 
+<div class="container">
+
+<h4 class="cyan-text"> <%= @Service.name %> </h4>
+<div class="divider"></div>
+
+<div >
+
+  <h5 class=" nabout "> <%= @Service.about %> </h5>
+
+</div>
 
 
-<h5 class="cyan-text"> <%= @Service.name %> </h5>
 <br>
+<div class="divider"></div>
+<br>
+<h5 class="cyan-text">
+Our Experts:
+</h5>
 <% @Service.experts.each do |expert| %>
   <div class="row">
-    <div class="col s5   ">
+    <div class="col-md-3 col-sm-3 col-xs-4 author author-wrapper ">
       <div class="card noracolor">
         <div class="card-content cyan-text">
           <span class="card-title"><%= expert.name %></span>
@@ -20,3 +34,5 @@
     </div>
   </div>
  <% end %>
+
+ </div>
