ready to publish experts rating not added yet

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,17 @@
 <div class="container">
+
 <%= image_tag 'rsz_aboutus.jpg' %>
+
+<br>
+<br>
+ <div class="divider"></div>
+
+ <br>
+ <br>
+  
+
+  <h5 class="cyan-text"> About Us </h5>
+  <div class="divider"></div>
 <p id="about">
 Awon  is a non-profit organization founded by Nora Albrman , 
 Awon dedicated to serving children who have developmental delays.  
@@ -7,10 +19,12 @@ serves children from birth to 6 years of age with a variety of special needs, in
  autism, Down syndrome, cerebral palsy, sensory issues, prematurity. 
  We offer individual early intervention services in preschool programs and 
  individual home sessions; depending upon the child’s individual needs.
-  Our services include Occupational Therapy,, Speech Therapy, Behavior Management.
+  Our services include Occupational Therapy, Speech Therapy, Behavior Management.
 
 </p>
-
+<div class="divider"></div>
+<br>
+<br>
 
 
 </div>
