--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,5 +30,8 @@ Welcome <%= @user.first_name %> <%= @user.last_name %>
        
         <% end %>
     <% end %>
-
+   <p class="cyan-darker-2 whit-text"> * <%= link_to "Edit Log in  Information", edit_user_registration_path %> *</p>
 </div>
+
+
+  
